fix(aside-wrapper): spacing when responsive

--- a/assets/scss/components/_aside-wrapper.scss
+++ b/assets/scss/components/_aside-wrapper.scss
@@ -1,22 +1,23 @@
 .aside__wrapper {
   display: flex;
-  margin-bottom: 2rem;
+  gap: spacing(14);
+
   @include media-breakpoint-down(xl) {
     flex-direction: row;
   }
   @include media-breakpoint-down(md) {
     flex-direction: column;
   }
-  gap: spacing(14);
   .left__side {
+    margin-top: spacing(12);
     flex: 1 1 60%;
   }
   .right__side {
+    margin-top: spacing(12);
     flex: 1 1 40%;
-    right: 0;
-
     img {
       width: 100%;
+      margin-bottom: 3rem;
     }
   }
 }
